...
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:background="@drawable/bg_category_chip"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="Fertilizante"
                android:textColor="@color/green_primary"
                android:textSize="9sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_product_name"
...
